// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookMessengerButton adds a beforeClick function for the click handler 1`] = `
<styled.a
  activeColor="#005cd7"
  color="#0084FF"
  hoverColor="#0070eb"
  onClick={[Function]}
  role="button"
  title=""
>
  <FacebookMessengerIcon />
</styled.a>
`;

exports[`FacebookMessengerButton does render if boxShadow is true 1`] = `
<styled.a
  activeColor="#005cd7"
  boxShadow={true}
  color="#0084FF"
  hoverColor="#0070eb"
  onClick={[Function]}
  role="button"
  title=""
>
  <FacebookMessengerIcon />
</styled.a>
`;

exports[`FacebookMessengerButton does render if teaser are provided 1`] = `
<styled.a
  activeColor="#005cd7"
  color="#0084FF"
  hoverColor="#0070eb"
  onClick={[Function]}
  role="button"
  title=""
>
  <FacebookMessengerIcon />
</styled.a>
`;

exports[`FacebookMessengerButton does render if utmParams are provided 1`] = `
<styled.a
  activeColor="#005cd7"
  color="#0084FF"
  hoverColor="#0070eb"
  onClick={[Function]}
  role="button"
  title=""
>
  <FacebookMessengerIcon />
</styled.a>
`;

exports[`FacebookMessengerButton renders a round button 1`] = `
<styled.a
  activeColor="#005cd7"
  color="#0084FF"
  hoverColor="#0070eb"
  onClick={[Function]}
  role="button"
  title=""
>
  <FacebookMessengerIcon />
</styled.a>
`;
